# Selfimprove

./: CMakeLists.txt  README.md  dTree.cpp  dTree.h  distributions.cpp  distributions.h  main.cpp  productDistribution.cpp  productDistribution.h  sampling.cpp  sampling.h  vList.cpp  vList.h
